--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,5 +1,5 @@
 @misc{UniAdminTools.jl,
-	author  = {MilesCranmer <miles.cranmer@gmail.com> and contributors},
+	author  = {Miles Cranmer and contributors},
 	title   = {UniAdminTools.jl},
 	url     = {https://github.com/MilesCranmer/UniAdminTools.jl},
 	version = {v1.0.0-DEV},
